--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "leadx-backend",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
