--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "start": "node index.js"
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
