--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 ﻿PORT=5000
 JWT_ACCESS_SECRET=LeadXSecretKey
-DB_HOST=localhost
+DB_HOST=bpmbbuhmp2r69aut7zfu-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_NAME=leadx_crm
-DB_USER=root
-DB_PASSWORD=root
+DB_NAME=bpmbbuhmp2r69aut7zfu
+DB_USER=uwyj4v7eko8ghe7l
+DB_PASSWORD=FO3K2Kk4zijKU5IFEeIo
 CORS_ORIGIN=http://localhost:3000
 SOCKET_URL=http://localhost:5000
 VITE_API_URL=http://localhost:5000
