--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "leadx-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
